--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.2",
     "@tailwindcss/typography": "^0.5.4",
-    "@vueuse/core": "^9.3.1",
-    "@vueuse/nuxt": "^9.3.1",
-    "nuxt": "3.0.0-rc.12"
+    "@vueuse/core": "^9.4.0",
+    "@vueuse/nuxt": "^9.4.0",
+    "nuxt": "3.0.0-rc.12",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13"
   }
 }
