--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.2",
+    "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.4",
     "@vueuse/core": "^9.4.0",
-    "@vueuse/nuxt": "^9.4.0",
-    "nuxt": "3.0.0-rc.12",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+    "@vueuse/nuxt": "^9.6.0",
+    "nuxt": "^3.0.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
+    "tailwindcss": "^3.2.4"
   }
 }
