--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "devDependencies": {
     "@nuxtjs/supabase": "^0.3.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@prisma/client": "^4.8.0",
     "@tailwindcss/typography": "^0.5.4",
     "@vueuse/core": "^9.6.0",
     "@vueuse/nuxt": "^9.6.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.0",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.mjs"
   }
 }
